<resources>
    <string name="app_name"><font color='OL'>OL</font><font color='Portal'>Portal</font></string>
    <string name="sign_button">Регистрация</string>
    <string name="notification">Нажимая "Регистрация", вы принимаете \n <a href="http://www.google.com/">условия пользовательского соглашения</a> OL Portal</string>
    <string name="registration_info">Пройдите процедуру регистрации, в ходе которой вы получите уникальный OL-номер</string>
    <string name="registration_code">Код подтверждения</string>
    <string name="registration_info2">Введите номер своего телефона, на него придет СМС с кодом для подтверждения регистрации:</string>
    <string name="congratulations">Поздравляем вас!</string>
    <string name="congratulations_2">Вы стали участником глобальной системы OL Portal</string>
    <string name="email_dialog">Использовать e-mail для восстановления пароля и получения обновлений</string>
    <string name="facebook_app_id">141954776246006</string>

</resources>
