<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.olportal.SplashActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:text="Выполнить вход"
        android:textColor="#fff" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="0.5"
        android:scaleType="centerInside"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/company_name_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/big_logo_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#fff"
        android:gravity="center">

        <Button
            android:id="@+id/sign_button"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_button_height"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/big_button_margin"
            android:layout_marginRight="@dimen/big_button_margin"
            android:text="@string/sign_button" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_button"
            android:layout_centerInParent="true"
            android:text="@string/notification"
            android:textAlignment="center"
            android:textColor="#000"
            android:textColorLink="@color/links"
            android:textSize="13dp" />
    </RelativeLayout>

</LinearLayout>
